--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -1,6 +1,6 @@
-.Navbar-test{
-    /*color: #ee750d; */
-    color: white;
+.Navigationsbar{
+    background-color: #ee750d;
+    padding: 30px;
     display: grid;
     grid-column-gap: 25px;
     grid-template-columns: repeat(auto-fit,minmax(2ch,max-content));
