mehr aufgeräumt und css

--- a/frontend/src/Navbar/Dropdown.css
+++ b/frontend/src/Navbar/Dropdown.css
@@ -1,8 +1,6 @@
-.headerRight {
-    float-offset: 1000px;
-    float: bottom;
-    background-color: black;
+.homeButton {
+    float : right;
 }
-.headerLeft {
-    float: right;
+.Dropdown {
+
 }
