--- a/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
+++ b/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
@@ -1,7 +1,8 @@
 .Tabellenfeld{
     width: 5%;
-    margin: 0.5% 1%;
+    height: 30px;
+    margin: 1% 1%;
     border: none;
     box-shadow: -1px -1px 4px black;
-    border-radius: 5px;
+    font-size: 30px;
 }
