--- a/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
+++ b/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
@@ -1,7 +1,9 @@
-.Tabellenfeld{
+.Tabellenfeld {
     width: 5%;
+    height: 40px;
     margin: 0.5% 1%;
-    border: none;
-    box-shadow: -1px -1px 4px black;
-    border-radius: 5px;
+    border: magenta;
+    box-shadow: -1px -1px 2px black;
+    font-size: 30px;
+
 }
