--- a/frontend/src/Mainpage/Tabelle/Tabelle.css
+++ b/frontend/src/Mainpage/Tabelle/Tabelle.css
@@ -1,6 +1,16 @@
 .Tabellenrahmen{
+    /*border : 1px solid #ee750d;
 
+     */
+    min-height: 200px;
+    align-content: center;
 }
 .Reihe{
+    /*border : 1px solid yellowgreen;
+     */
+    align-content: center;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 
 }
