--- a/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
+++ b/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
@@ -1,8 +1,16 @@
-.Tabellenfeld{
-    width: 5%;
+Tabellenfeld{
+    width: 10%;
     height: 30px;
     margin: 1% 1%;
     border: none;
     box-shadow: -1px -1px 4px black;
     font-size: 30px;
+}
+.Tabellenfeld {
+    width: 10%;
+    height: 40px;
+    margin: 5px;
+    padding: 3px 7px;
+    font-size: 30px;
+    box-shadow: 0 -3px 10px rgb(238, 117, 13);
 }
