--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,4 +16,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container {
+  max-width: 1000px;
+  margin: 5% auto;
+  box-shadow: 0px 1px 5px black;
+  min-height: 300px;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 5px;
+}
+
 
