--- a/frontend/src/Mainpage/Tabelle/Tabelle.css
+++ b/frontend/src/Mainpage/Tabelle/Tabelle.css
@@ -1,16 +1,30 @@
-.Tabellenrahmen{
-    /*border : 1px solid #ee750d;
+table {
+    border-collapse: collapse;
+    max-width: 800px;
+    width: 20%;
+    margin: 1rem auto;
+}
+table th, table td{
+    border: 1px solid #ddd;
+    padding: 8px;
+}
 
-     */
+
+/*
+.Tabellenrahmen{
+    border : 1px solid #ee750d;
+
+
     min-height: 200px;
     align-content: center;
 }
 .Reihe{
-    /*border : 1px solid yellowgreen;
-     */
+    border : 1px solid yellowgreen;
+
     align-content: center;
     margin: 0 auto;
     display: flex;
     justify-content: center;
 
 }
+*/
