--- a/frontend/src/Buttong/Buttong.css
+++ b/frontend/src/Buttong/Buttong.css
@@ -10,4 +10,21 @@ Button {
     text-decoration: none;
     font-size: 15px;
     font-family: inherit;
+    text-transform: uppercase;
+}
+
+.Button {
+    display: inline-block;
+    background: white;
+    padding: 10px 16px;
+    border-radius: 4px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    color: #c83b50;
+    box-shadow: 0 8px 16px -4px rgb(200 59 80 / 50%);
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    text-transform: uppercase;
+    margin: 5px;
 }
