--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -1,9 +1,22 @@
-.Navigationsbar{
+.navbar{
     background-color: #ee750d;
-    padding: 5px;
-    display: grid;
-    grid-column-gap: 25px;
-    grid-template-columns: repeat(auto-fit,minmax(2ch,max-content));
-    width: 100%;
+    padding: 0 1rem;
+    /*display: grid;
+      grid-column-gap: 25px;
+      grid-template-columns: repeat(auto-fit,minmax(2ch,max-content));
+      width: 100%;
+
+
+     */
     box-shadow: 0px 1px 5px black;
+    height: var(--nav-size);
+    border-bottom: var(--border);
+
+}
+
+.navbar-nav{
+    max-width: 100%;
+    height:100%;
+    display: flex;
+    justify-content: flex-start;
 }
