--- a/frontend/src/Navbar/Dropdown.css
+++ b/frontend/src/Navbar/Dropdown.css
@@ -3,7 +3,6 @@
     position: absolute;
     top: 80px;
     width: 200px;
-
     background-color: white;
     border:var(--border);
     border-radius: var(--border-radius);
@@ -22,13 +21,25 @@
     border-radius: var(--border-radius);
     transition: background var(--speed);
     padding:0.5rem;
-    justify-content: center;
+    justify-content: space-between;
     font-size: 18px;
-
 }
 .menu-item:hover{
     background-color: lightgrey;
 }
+.icon-button {
+    --button-size: calc(var(--nav-size) * 0.5);
+    width: var(--button-size);
+    height: var(--button-size);
+    border-radius: 50%;
+    padding: 5px;
+    margin: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: filter 300ms;
+}
+
 .icon-right{
     margin-left: auto;
 }
