--- a/frontend/src/Navbar/Navbar.css
+++ b/frontend/src/Navbar/Navbar.css
@@ -5,16 +5,23 @@
       grid-column-gap: 25px;
       grid-template-columns: repeat(auto-fit,minmax(2ch,max-content));
       width: 100%;
-
-
      */
+
     box-shadow: 0px 1px 5px black;
     height: 70px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .navbar-nav{
-    max-width: 100%;
+    max-width: 50%;
     height:100%;
     display: flex;
     justify-content: flex-start;
+}
+.navbar-icon{
+
+}
+.darkModeSwitch {
+
 }
