--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,7 @@ body {
    */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
@@ -24,6 +25,7 @@ code {
   border: 1px solid black;
   padding: 10px;
   border-radius: 5px;
+  background-color: whitesmoke;
 }
 :root {
   --bg:  #242526;
@@ -33,6 +35,7 @@ code {
   --border: 1px solid #474a4d;
   --border-radius: 8px;
   --speed: 500ms;
+  filter:invert(0);
 }
 
 ul {
