flex container hinzugefügt, ausrichtung aufgrund des js codes unvollständig (oben und links müssen in Tabelle verschoben werden)

--- a/frontend/src/Mainpage/Casual.css
+++ b/frontend/src/Mainpage/Casual.css
@@ -21,4 +21,24 @@
 .StartKnopf {
 
 }
+.CasualTabellenFelder {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 
+
+}
+.TabelleLinks {
+    align-self: flex-start;
+}
+.TabelleOben{
+
+}
+.TabelleMain {
+    align-self: center;
+}
+.GANZGROßERDIV {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
