--- a/frontend/src/Mainpage/Tabelle/Tabelle.css
+++ b/frontend/src/Mainpage/Tabelle/Tabelle.css
@@ -13,7 +13,13 @@ table th .table td{
     justify-content: center;
 }
 
+.absenden {
+    padding-left: 50px;
+}
+.Tabellejs {
 
+
+}
 /*
 .table{
     border : 1px solid #ee750d;
