--- a/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
+++ b/frontend/src/Mainpage/Tabelle/Tabellenfeld.css
@@ -6,19 +6,24 @@ Tabellenfeld{
     box-shadow: -1px -1px 4px black;
     font-size: 30px;
 }
+
 .Tabellenfeld {
-    height: 20px;
+    height: 40px;
     margin: 5px;
     padding: 3px 7px;
     font-size: 20px;
     border-radius: 5px;
-    width: 70px;
+    width: 140px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .TabellenfeldE {
-    height: 20px;
+    height: 40px;
     margin: 3px;
     padding: 3px 7px;
     font-size: 20px;
     border-radius: 5px;
-    width: 70px;
+    width: 140px;
+    white-space: nowrap;
+    overflow: hidden;
 }
