--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,10 +18,11 @@ code {
     monospace;
 }
 .container {
-  max-width: 1500px;
+  width: 1500px;
+  max-width: 1920px;
   margin: 5% auto;
   box-shadow: 0px 1px 5px black;
-  min-height: 300px;
+  min-height: 200px;
   border: 1px solid black;
   padding: 10px;
   border-radius: 5px;
