embedded the dropdowns into casual and relocated the StartKnopf in css

--- a/frontend/src/Mainpage/Casual.css
+++ b/frontend/src/Mainpage/Casual.css
@@ -8,46 +8,50 @@
     margin: 20px 0;
     display: flex;
     justify-content: space-around;
-    font-size: 50px;
+    font-size: 30px;
+    padding:30px;
+    align-items: flex-start;
+    align-content: flex-start;
 }
 .Eingabefeld label {
     align-self: center;
 }
 .Eingabefeld div {
-    align-self: center;
+    width: 15%;
+    align-self: flex-start;
 }
 .Spalteneingabe {
     display: flex;
     flex-direction: column;
+
 }
 .Spalteneingabe div{
-    font-size: 30px;
-
-    border-radius: 5px;
-    border-style: dashed;
-    border-color: black;
-    background: lightgrey;
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+    border-radius: var(--border-radius);
+    padding: 1rem;
 }
 .Zeileneingabe div{
-    font-size: 30px;
-    padding: 5px;
-    border-radius: 5px;
-    border-style: dashed;
-    border-color: black;
-    background: lightgrey;
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+    border-radius: var(--border-radius);
+    padding: 1rem;
 }
 .Zeileneingabe {
     display: flex;
     flex-direction: column;
 }
 
-.StartKnopf {
-
-}
 .VorAbsenden {
     display: flex;
     flex-direction: column;
 }
+.StartKnopf {
+    align-self: flex-start;
+}
+
 .CasualTabellenFelder {
     display: flex;
     justify-content: center;
